force-app/main/default/objects/DIA_Daily_Production_Summary__c/DIA_Daily_Production_Summary__c.object-meta.xml
<CustomObject>
    <label>DIA Daily Production Summary</label>
    <nameField>
        <displayFormat>DIADPS-{000000}</displayFormat>
        <label>DIA Daily Production Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DIA Daily Production Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>