force-app/main/default/objects/DIA_Daily_Production_Summary__c/fields/Leads_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Leads_Accepted__c</fullName>
    <label>Leads Accepted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>