force-app/main/default/objects/DIA_Daily_Production_Summary__c/fields/Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DIA_Daily_Production_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>